atyle : fixed alignment of signup form

--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -5,6 +5,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  left: 0;
   margin-top: 5rem;
   min-height: 75vh;
 }
